Clean up and paginate tournaments
